--- a/css/general.css
+++ b/css/general.css
@@ -286,3 +286,19 @@ tr{
     position: relative;
     right: 30px;
 }
+
+.nav_selected{
+    width: 50px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: var(--accent);
+    color: var(--backgroundc);
+    background: var(--secondary);
+    border: none;
+    padding: 5px  0;
+    font-size: 15px;
+    /* box-shadow: 3px 3px 5px #41150869; */
+}
+.nav_pro{
+    width: 70px;
+}
